navbar not showing error fix

--- a/src/Components/Navbar/style.scss
+++ b/src/Components/Navbar/style.scss
@@ -24,7 +24,7 @@
       
       h1 {
         margin-top: 0;
-        padding: 30px 10px 40px;
+        padding: 50px 10px 40px;
         font-size: 26px;
       }
   
